--- a/TW_W4_HW_Scraping_Box_Office_Data.ipynb
+++ b/TW_W4_HW_Scraping_Box_Office_Data.ipynb
@@ -117,6 +117,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "data.info()"
+      ],
+      "metadata": {
+        "id": "JI00Oi1vJPYX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Choose only 6 movies\n",
@@ -140,37 +151,11 @@
       "source": [
         "# create the new dataframe and call it data ( look the the hint above)\n",
         "\n",
-        "data=pd.read_csv('box_office_data.csv')\n",
-        "data.head(6)\n"
+        "data=df.head(6)\n",
+        "data"
       ],
       "metadata": {
-        "id": "OrHG0klW3b_E"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data.info()"
-      ],
-      "metadata": {
-        "id": "Uu0PM8ichtst"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
-        "# This line is correct as per your DataFrame structure\n",
-        "df['Total Cleaned'] = df['total_gross'].replace('[^\\d.]', '', regex=True).replace('', pd.NA).astype(float)\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "mOnYBwGV5LH9"
+        "id": "Fs9Nz30nI8Eg"
       },
       "execution_count": null,
       "outputs": []
@@ -197,9 +182,9 @@
       "cell_type": "code",
       "source": [
         "# Task 1 code need to be here\n",
-        "#df['Total Gross'] = pd.to_numeric(df['Total Gross'], errors='coerce')\n",
-        "plt.bar(x='Title', y='Total Gross')\n",
-        "plt.show()\n"
+        "data.plot.bar(x='gross',y='total_gross')\n",
+        "plt.xlabel('Title')\n",
+        "plt.ylabel('Total Gross')"
       ],
       "metadata": {
         "id": "PHMiBFBw56qw"
@@ -226,16 +211,34 @@
       "cell_type": "code",
       "source": [
         "## Task 2 Code be need to be here\n",
-        "\n",
+        "sorted_data = data.sort_values(by='total_gross', ascending=True)\n",
         "# Correcting the sorting method\n",
-        "\n",
-        "\n",
-        "# Now plotting with matplotlib\n",
-        "\n",
-        "\n"
+        "sorted_data = data.sort_values(by='total_gross', ascending=True)\n",
+        "#Create Horizontal Bar\n",
+        "sorted_data.plot.barh(x='gross',y='total_gross')\n",
+        "plt.xlabel('Total Gross')\n",
+        "plt.ylabel('Title')"
       ],
       "metadata": {
         "id": "2tjdYfTrkB_Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now plotting with matplotlib\n",
+        "\n",
+        "plt.barh(sorted_data['gross'],sorted_data['total_gross'])\n",
+        "plt.xlabel('Total Gross')\n",
+        "plt.ylabel('Title')\n",
+        "\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "pi4rMzQjbeKy"
       },
       "execution_count": null,
       "outputs": []
@@ -254,7 +257,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Task 3 code  need to be here."
+        "# Task 3 code  need to be here.\n",
+        "plt.barh(sorted_data['gross'],sorted_data['total_gross']/1000000)\n",
+        "plt.xlabel('Total Gross')\n",
+        "plt.ylabel('Title')\n",
+        "\n",
+        "\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "z2KXNnEOGibc"
@@ -283,7 +292,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Task 4 code  need to be here."
+        "# Task 4 code  need to be here.\n",
+        "plt.barh(sorted_data['gross'],sorted_data['total_gross']/1000000)\n",
+        "plt.xlabel('Total Revenue')\n",
+        "plt.ylabel('Movie Title')\n",
+        "plt.title('Box Office Chart by Total Revenue')\n",
+        "plt.grid(axis='x')\n",
+        "ax = plt.gca()  # Get the current axes\n",
+        "ax.set_axisbelow(True)  # Ensure gridlines are below other elements\n",
+        "\n",
+        "\n",
+        "ax.spines['top'].set_visible(False)    # Remove the top spine\n",
+        "ax.spines['right'].set_visible(False)  # Remove the right spine\n",
+        "ax.spines['left'].set_visible(False)   # Remove the left spine\n",
+        "\n",
+        "\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "O-cvkRVsI47B"
