--- a/TW_W4_HW_Scraping_Box_Office_Data.ipynb
+++ b/TW_W4_HW_Scraping_Box_Office_Data.ipynb
@@ -107,7 +107,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df=pd.read_csv('box_office_data.csv')\n",
+        "df=pd.read_csv('https://raw.githubusercontent.com/Twujira/TigistData110/main/Dataset/box_office_data.csv')\n",
         "df.head()\n"
       ],
       "metadata": {
@@ -119,7 +119,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data.info()"
+        "df.info()"
       ],
       "metadata": {
         "id": "JI00Oi1vJPYX"
@@ -150,12 +150,22 @@
       "cell_type": "code",
       "source": [
         "# create the new dataframe and call it data ( look the the hint above)\n",
-        "\n",
         "data=df.head(6)\n",
         "data"
       ],
       "metadata": {
         "id": "Fs9Nz30nI8Eg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['weeks'] = data['weeks'].str.replace('[$,]', '', regex=True).astype(float)"
+      ],
+      "metadata": {
+        "id": "8n0EmGATsZ8V"
       },
       "execution_count": null,
       "outputs": []
@@ -182,12 +192,24 @@
       "cell_type": "code",
       "source": [
         "# Task 1 code need to be here\n",
-        "data.plot.bar(x='gross',y='total_gross')\n",
-        "plt.xlabel('Title')\n",
-        "plt.ylabel('Total Gross')"
+        "\n"
       ],
       "metadata": {
         "id": "PHMiBFBw56qw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.plot.bar(x='gross', y='weeks')\n",
+        "plt.xlabel('Title')\n",
+        "plt.ylabel('Total Gross')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "gjmzrR10qCRj"
       },
       "execution_count": null,
       "outputs": []
@@ -211,11 +233,10 @@
       "cell_type": "code",
       "source": [
         "## Task 2 Code be need to be here\n",
-        "sorted_data = data.sort_values(by='total_gross', ascending=True)\n",
         "# Correcting the sorting method\n",
-        "sorted_data = data.sort_values(by='total_gross', ascending=True)\n",
+        "sorted_data = data.sort_values(by='weeks', ascending=True)\n",
         "#Create Horizontal Bar\n",
-        "sorted_data.plot.barh(x='gross',y='total_gross')\n",
+        "sorted_data.plot.barh(x='gross',y='weeks')\n",
         "plt.xlabel('Total Gross')\n",
         "plt.ylabel('Title')"
       ],
@@ -230,7 +251,7 @@
       "source": [
         "# Now plotting with matplotlib\n",
         "\n",
-        "plt.barh(sorted_data['gross'],sorted_data['total_gross'])\n",
+        "plt.barh(sorted_data['gross'],sorted_data['weeks'])\n",
         "plt.xlabel('Total Gross')\n",
         "plt.ylabel('Title')\n",
         "\n",
@@ -258,7 +279,7 @@
       "cell_type": "code",
       "source": [
         "# Task 3 code  need to be here.\n",
-        "plt.barh(sorted_data['gross'],sorted_data['total_gross']/1000000)\n",
+        "plt.barh(sorted_data['gross'],sorted_data['weeks']/1000000)\n",
         "plt.xlabel('Total Gross')\n",
         "plt.ylabel('Title')\n",
         "\n",
@@ -293,7 +314,7 @@
       "cell_type": "code",
       "source": [
         "# Task 4 code  need to be here.\n",
-        "plt.barh(sorted_data['gross'],sorted_data['total_gross']/1000000)\n",
+        "plt.barh(sorted_data['gross'],sorted_data['weeks']/1000000)\n",
         "plt.xlabel('Total Revenue')\n",
         "plt.ylabel('Movie Title')\n",
         "plt.title('Box Office Chart by Total Revenue')\n",
