--- a/Project1_Databreach.ipynb
+++ b/Project1_Databreach.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdY6L/axUKmHDMWQ02D8Hb",
+      "authorship_tag": "ABX9TyP9p+gQB/eB/F/WMJTCSEtF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1401,6 +1401,35 @@
       ],
       "metadata": {
         "id": "NOQo6ez25_4t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Recommendation\n",
+        "\n",
+        "*  Know about data life cycle and data governance.\n",
+        "\n",
+        " 1. Create\n",
+        " 2. Storage\n",
+        " 3. Use\n",
+        " 4. Share\n",
+        " 5. Archive\n",
+        " 6. Destroy\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "* I highly recommend identifying the risk factors of data breaches.\n",
+        "\n",
+        "1. Retention: the length of time that the data exists.\n",
+        "2. Proliferation: the number of copies of data that exists.\n",
+        "3. Access: the number of people who have access, the ways that can be accessed, and the ease of obtaining access.\n",
+        "4. Liquidity: the time required to access, transfer, and process the data.\n",
+        "5. Value: the amount the data is worth."
+      ],
+      "metadata": {
+        "id": "P1R80RY3offE"
       }
     }
   ]
