--- a/Markov_Chain.ipynb
+++ b/Markov_Chain.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBrRTsX1JvcWaPL3WB9Nkg",
+      "authorship_tag": "ABX9TyOxcKJ0gfGsRqKgUMj+5j1I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,12 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Markov_Chain Project1\n",
+        "\n",
+        "By: Tigist Wujira\n",
+        "\n",
+        "Introduction\n",
+        "\n",
         "As a child, I used to bet with my siblings every night on who would host the evening news. The prime time news began streaming at 8:00 pm on Ethiopia's national TV, Ethiopian Television (ETV). There were three well-known hosts who took turns leading the news, but it was impossible to predict who would be on air that evening.\n",
         "\n",
         "Their name is Hermela, Amare, and Temesgen\n",
@@ -60,13 +66,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 80,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fxw923um_2nF",
-        "outputId": "ee5bc0cd-03dc-438a-9538-5418e5246c50"
+        "outputId": "378ff4b0-8e5a-4890-be44-9d997317e14b"
       },
       "outputs": [
         {
@@ -81,7 +87,7 @@
       ],
       "source": [
         "# Define the transition matrix\n",
-        "T_host = np.array([\n",
+        "T_host = np.matrix([\n",
         "    [0.7, 0.2, 0.1],\n",
         "    [0.3, 0.5, 0.2],\n",
         "    [0.2, 0.2, 0.6]\n",
@@ -107,7 +113,7 @@
         "V0 = np.array([1, 0, 0])\n",
         "\n",
         "# Multiply the initial state vector with the transition matrix\n",
-        "V1 =T_host * V0\n",
+        "V1 =V0*T_host\n",
         "\n",
         "# Print the result\n",
         "print(V1)\n"
@@ -117,17 +123,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4jCfRyqzBPaS",
-        "outputId": "44df2aba-fbd9-4e5c-cba0-60410c0aff3f"
+        "outputId": "97af51b4-111f-48d3-f1a8-76b302dfca00"
       },
-      "execution_count": 57,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.700000000000000 0 0]\n",
-            " [0.300000000000000 0 0]\n",
-            " [0.200000000000000 0 0]]\n"
+            "[[0.7 0.2 0.1]]\n"
           ]
         }
       ]
@@ -145,7 +149,7 @@
       "cell_type": "code",
       "source": [
         "#multiply day1 result with transition matrix\n",
-        "V2= T_host* V1\n",
+        "V2=V1*T_host\n",
         "print(V2)"
       ],
       "metadata": {
@@ -153,17 +157,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iryR30_RGOH5",
-        "outputId": "b17e36a3-f7e3-45fb-b98f-0bd553fbc204"
+        "outputId": "d7150ca7-14c8-4e52-9a9d-f56ab136898d"
       },
-      "execution_count": 60,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.490000000000000 0 0]\n",
-            " [0.0900000000000000 0 0]\n",
-            " [0.0400000000000000 0 0]]\n"
+            "[[0.57 0.26 0.17]]\n"
           ]
         }
       ]
@@ -181,7 +183,7 @@
       "cell_type": "code",
       "source": [
         "#multiply day2 result with transition matrix\n",
-        "V3= T_host * V2\n",
+        "V3=V2*T_host\n",
         "print(V3)"
       ],
       "metadata": {
@@ -189,17 +191,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MX_Sr-LhIh5z",
-        "outputId": "57b52f8d-b185-44d6-8932-d97bcd0b402a"
+        "outputId": "efa59194-dd24-4d3f-a6c8-99fdf3516501"
       },
-      "execution_count": 61,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.343000000000000 0 0]\n",
-            " [0.0270000000000000 0 0]\n",
-            " [0.00800000000000000 0 0]]\n"
+            "[[0.511 0.278 0.211]]\n"
           ]
         }
       ]
@@ -255,7 +255,7 @@
       "cell_type": "code",
       "source": [
         "#Initial 2022 population\n",
-        "x0 = np.array([\n",
+        "x0 = np.matrix([\n",
         "    [600000],\n",
         "    [400000]\n",
         "])\n",
@@ -266,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_zHtv1EJT6tl",
-        "outputId": "df55b1e2-8436-4f5d-fcd2-a14bbf60e9a1"
+        "outputId": "d0b14ce4-d536-4280-9fcc-4a84617d1b95"
       },
-      "execution_count": 63,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,16 +302,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bvOehAnfUQfz",
-        "outputId": "d536e9f2-8c15-4f6f-a544-c5fe0bf5150c"
+        "outputId": "90847056-d31f-496d-f689-cf7dcbd7f047"
       },
-      "execution_count": 72,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[552000.  24000.]\n",
-            " [ 32000. 384000.]]\n"
+            "[[568000.]\n",
+            " [432000.]]\n"
           ]
         }
       ]
@@ -330,25 +330,24 @@
     {
       "cell_type": "code",
       "source": [
-        "A = np.array([[0.92, 0.04], [0.08, 0.96]])\n",
-        "A_22 = np.linalg.matrix_power(A, 22)\n",
-        "print(A_22)"
+        "A_8 = np.linalg.matrix_power(A, 8)\n",
+        "print(A_8)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eJn1QWTXVsRY",
-        "outputId": "21eba34f-5c90-407c-b80b-0919c8f0c45b"
+        "outputId": "cf848494-a096-4811-ddbb-6764bad4018d"
       },
-      "execution_count": 73,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.37337642 0.31331179]\n",
-            " [0.62662358 0.68668821]]\n"
+            "[[0.57308968 0.21345516]\n",
+            " [0.42691032 0.78654484]]\n"
           ]
         }
       ]
@@ -356,7 +355,7 @@
     {
       "cell_type": "code",
       "source": [
-        "P_2030=A_22*x0\n",
+        "P_2030=A_8*x0\n",
         "print(P_2030)"
       ],
       "metadata": {
@@ -364,16 +363,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-UIaxaoQWm6U",
-        "outputId": "9d54db3c-b317-4636-a09c-72da0e5cdc62"
+        "outputId": "c55adb17-da8d-407c-8d37-b5b6ae0ae6e9"
       },
-      "execution_count": 74,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[224025.85095737 187987.07452132]\n",
-            " [250649.43269509 274675.28365246]]\n"
+            "[[429235.87328147]\n",
+            " [570764.12671853]]\n"
           ]
         }
       ]
