--- a/Markov_Chain.ipynb
+++ b/Markov_Chain.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxcKJ0gfGsRqKgUMj+5j1I",
+      "authorship_tag": "ABX9TyOa5viAP1YQQbWYtg/N6685",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,7 +321,13 @@
       "source": [
         "## 2. For 2030\n",
         "\n",
-        "P2030= A^22*x0"
+        "The difference between 2030 and 2022 is 8 years\n",
+        "\n",
+        "Therefore:\n",
+        "\n",
+        "'A' the power of 8\n",
+        "\n",
+        "P_2030= A^8*x0"
       ],
       "metadata": {
         "id": "D0i6M89-VtM4"
@@ -338,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eJn1QWTXVsRY",
-        "outputId": "cf848494-a096-4811-ddbb-6764bad4018d"
+        "outputId": "cc12a8bc-5ca2-429b-bf2f-c945b87d2285"
       },
-      "execution_count": 88,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,9 +369,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-UIaxaoQWm6U",
-        "outputId": "c55adb17-da8d-407c-8d37-b5b6ae0ae6e9"
+        "outputId": "350a2647-2f0b-4432-e632-54db41c670a2"
       },
-      "execution_count": 89,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
