--- a/Markov_Chain.ipynb
+++ b/Markov_Chain.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOa5viAP1YQQbWYtg/N6685",
+      "authorship_tag": "ABX9TyOHArX0tMqpQYU1vp8ncWNF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,18 +61,18 @@
       "metadata": {
         "id": "psC0EpLtFvl9"
       },
-      "execution_count": 14,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fxw923um_2nF",
-        "outputId": "378ff4b0-8e5a-4890-be44-9d997317e14b"
+        "outputId": "64d3a375-79e9-4b06-df45-c6b9c8c4644f"
       },
       "outputs": [
         {
@@ -123,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4jCfRyqzBPaS",
-        "outputId": "97af51b4-111f-48d3-f1a8-76b302dfca00"
+        "outputId": "072808b8-d82c-4428-f83c-81647a435ecd"
       },
-      "execution_count": 82,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iryR30_RGOH5",
-        "outputId": "d7150ca7-14c8-4e52-9a9d-f56ab136898d"
+        "outputId": "da1f9d06-737d-4a8d-9acc-a5aacaaa562b"
       },
-      "execution_count": 83,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MX_Sr-LhIh5z",
-        "outputId": "efa59194-dd24-4d3f-a6c8-99fdf3516501"
+        "outputId": "ea567392-75aa-4000-e89b-fc116384b116"
       },
-      "execution_count": 84,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,9 +237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZUrXWKlpQwW_",
-        "outputId": "2b2250e1-3f42-4d23-fe62-1ca2ce4dbd71"
+        "outputId": "0bf30a69-89cf-4c74-db3a-63eb67c8441e"
       },
-      "execution_count": 62,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_zHtv1EJT6tl",
-        "outputId": "d0b14ce4-d536-4280-9fcc-4a84617d1b95"
+        "outputId": "c35331df-3998-481a-9ba3-90f3e55c1c51"
       },
-      "execution_count": 75,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,9 +302,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bvOehAnfUQfz",
-        "outputId": "90847056-d31f-496d-f689-cf7dcbd7f047"
+        "outputId": "5efe8cfa-5fad-4144-f45d-2daf2f6fed69"
       },
-      "execution_count": 76,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
         "\n",
         "'A' the power of 8\n",
         "\n",
-        "P_2030= A^8*x0"
+        "P_2030= A^8*x0 (the initial population)"
       ],
       "metadata": {
         "id": "D0i6M89-VtM4"
@@ -344,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eJn1QWTXVsRY",
-        "outputId": "cc12a8bc-5ca2-429b-bf2f-c945b87d2285"
+        "outputId": "36e32e01-d519-429f-9c49-08213260cb4c"
       },
-      "execution_count": 91,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,9 +369,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-UIaxaoQWm6U",
-        "outputId": "350a2647-2f0b-4432-e632-54db41c670a2"
+        "outputId": "63158bf0-d1fa-48e5-fb60-0ad7733dd83e"
       },
-      "execution_count": 92,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,6 +382,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusion\n",
+        "\n",
+        "By the year 2030, the city is expected to have a population of 429,236, while the suburbs are projected to have a population of 570,764."
+      ],
+      "metadata": {
+        "id": "-0XymXVWvRHz"
+      }
     }
   ]
 }
